# ros2-autonomous-robot-navigation

./: LICENSE  README.md
docs/: ARQUITETURA.md  EXPLORACAO.md  GETTING_STARTED.md  NAV2.md  OBSTACULOS_SIMULACAO.md  PRECEITOS_BASICOS.md  ROBO_REAL.md  SLAM.md  TELEOP_TURTLEBOT3.md  VISAO.md
install/: local_setup.sh  setup.sh
install/robot_sim/lib/robot_sim/: cmd_vel_mixer  exploration_goal  navigator  obstacle_avoider  obstacle_detector  vision_node
install/robot_sim/share/robot_sim/: package.dsv  package.ps1  package.sh  package.xml
install/robot_sim/share/robot_sim/config/: nav2_params.yaml  slam_params.yaml
install/robot_sim/share/robot_sim/launch/: avoider.launch.py  avoider_exploration.launch.py  nav2.launch.py  navigation.launch.py  slam.launch.py  spawn_stable_4wd.launch.py  stable_4wd_world.launch.py  teleop_with_avoider.launch.py  turtlebot3_world_delayed.launch.py  vision.launch.py
install/robot_sim/share/robot_sim/models/stable_4wd_robot/: model.sdf
log/: latest_build  latest_test
scripts/: check_teleop.sh  cmd_vel_relay.py
src/robot_sim/: package.xml  setup.py
src/robot_sim/config/: nav2_params.yaml  slam_params.yaml
src/robot_sim/launch/: avoider.launch.py  avoider_exploration.launch.py  nav2.launch.py  navigation.launch.py  slam.launch.py  teleop_with_avoider.launch.py  turtlebot3_world_delayed.launch.py  vision.launch.py
src/robot_sim/robot_sim/: __init__.py  astar.py
src/robot_sim/robot_sim/nodes/: obstacle_avoider.py  vision_node.py
